@@ -46,6 +46,7 @@ VERSION 1.2.2 (??? ?? ??:?? 2005)
   directory to use as a link_dest target (up to the oldest directory)
 - When use_lazy_deletes is enabled, remove the lockfile before the final
   delete
+- Expanded on default (no args) and help messages
 
 VERSION 1.2.1 (Apr 09 15:10 2005)
 ------------------------------------------------------------------------------
